RESOLVED FIXED217763
Crash in -[WKDateTimePicker setDateTimePickerToInitialValue]
https://bugs.webkit.org/show_bug.cgi?id=217763
Summary Crash in -[WKDateTimePicker setDateTimePickerToInitialValue]
Aditya Keerthi
Reported 2020-10-15 09:57:22 PDT
...
Attachments
Patch (2.27 KB, patch)
2020-10-15 10:03 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2020-10-15 09:57:49 PDT
Aditya Keerthi
Comment 2 2020-10-15 10:03:37 PDT
EWS
Comment 3 2020-10-15 11:17:45 PDT
Committed r268537: <https://trac.webkit.org/changeset/268537> All reviewed patches have been landed. Closing bug and clearing flags on attachment 411450 [details].
Note You need to log in before you can comment on or make changes to this bug.