Cherry-pick r268537. rdar://problem/70733338

Crash in -[WKDateTimePicker setDateTimePickerToInitialValue]
    https://bugs.webkit.org/show_bug.cgi?id=217763
    <rdar://problem/68635008>

    Reviewed by Wenson Hsieh.

    Crash occurs due to the use of an autoreleased NSString in
    setDateTimePickerToInitialValue. To fix, make the variable
    a RetainPtr.

    * UIProcess/ios/forms/WKDateTimeInputControl.mm:
    (-[WKDateTimePicker setDateTimePickerToInitialValue]):

    Canonical link: https://commits.webkit.org/230501@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268537 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.274@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@269086 268f45cc-cd09-0410-ab3c-d52691b4dbfc